crates/rome_formatter/tests/specs/prettier/js/comments/jsdoc.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: jsdoc.js

---
# Input
```js
/** @type {any} */
const x = (
    <div>
        <div />
    </div>
);

/**
 * @type {object}
 */
() => (
    <div>
        sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
    </div>
);

/**
 * @type {object}
 */
function HelloWorld() {
    return (
        <div>
           <span>Test</span>
        </div>
    );
}
```

# Output
```js
/** @type {any} */
const x = (
    <div>
        <div />
    </div>
);

/**
 * @type {object}
 */
() => (
    <div>
        sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
    </div>
);

/**
 * @type {object}
 */
function HelloWorld() {
  return (
        <div>
           <span>Test</span>
        </div>
    );
}

```

# Errors
```
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 9259ba1f51 (abandoning jsx if no closing element is found)
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ jsdoc.js:3:5
  │  
3 │ ┌     <div>
4 │ │         <div />
  │ └───────────────^ TypeScript only syntax
<<<<<<< HEAD
=======
error[SyntaxError]: expected `')'` but instead found `div`
  ┌─ jsdoc.js:4:10
  │
4 │         <div />
  │          ^^^ unexpected
>>>>>>> 0ae10e4634 (jsx in arrow functions and as statements)
=======
>>>>>>> 9259ba1f51 (abandoning jsx if no closing element is found)

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
  ┌─ jsdoc.js:5:6
  │
5 │     </div>
  │     -^ But this operator was encountered instead
  │     │ 
  │     This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
  ┌─ jsdoc.js:6:1
  │
6 │ );
  │ ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ jsdoc.js:12:5
   │  
12 │ ┌     <div>
13 │ │         sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
   │ └──────────────────────────────────────────────────────────────────────────────────^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ jsdoc.js:14:6
   │
14 │     </div>
   │     -^ But this operator was encountered instead
   │     │ 
   │     This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ jsdoc.js:15:1
   │
15 │ );
   │ ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ jsdoc.js:22:9
   │  
22 │ ┌         <div>
23 │ │            <span>Test</span>
   │ └─────────────────────^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ jsdoc.js:23:23
   │
23 │            <span>Test</span>
   │                      -^ But this operator was encountered instead
   │                      │ 
   │                      This operator requires a right hand side value

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ jsdoc.js:24:9
   │
24 │         </div>
   │         ^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ jsdoc.js:25:5
   │
25 │     );
   │     ^ Expected an expression here


```


